--- a/user/content/faq/faq.txt
+++ b/user/content/faq/faq.txt
@@ -9,45 +9,28 @@ Heading1: Design & Philosophy
 Questions1: 
 
 - 
-  question: >
-    Have we been more liberated by the
-    changes in technology?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+  question: Our design philosophy.
+  answer: >
+    Fun and sophistication. We bring
+    together design and engineering to
+    ensure innovative product development
+    and beautiful products down to the last
+    detail.
 - 
-  question: Why did Phnam yell at me?
+  question: Our design process.
   answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+    We utilize a four-step process: Discover problems and identify opportunities, Design solutions (sketch, 3D modeling, prototyping), followed by a Refinement phase and finally the Delivery of files. Following this process, we offer extended services to ensure design intent is kept through the complexities of manufacturing.
+    Throughout the whole process, we collaborate with the client, making decisions together, and advising them on calculated risks.
 - 
-  question: 'Should I whine at Mardis if Phnam yells  at me for producing poor work?'
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
-- 
-  question: >
-    Should I quit being a designer because I
-    clearly have nothing intelligent to say?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+  question: How we approach to sustainability.
+  answer: >
+    Plastic is inherent to mass
+    manufacturing, and we cannot always
+    replace it with a more sustainable
+    material. In those cases, we strive to
+    create beautiful products that people
+    want to own for years. We call it
+    sustainability through desire.
 
 ----
 
@@ -58,43 +41,24 @@ Heading2: Manufacturing &  Engineering
 Questions2: 
 
 - 
-  question: 'I have no clue with how to make my  doodle into a real prototype, where should I get started?'
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
-- 
-  question: Do I need to learn Chinese?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
-- 
   question: >
-    What if I only have $ budget but I want
-    to materials cost $$$$ ?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+    Do you practice lean product
+    development?
+  answer: >
+    Closely aligned design, engineering, and
+    development teams can reduce time to
+    market while mitigating risk and
+    eliminating handoff delays between
+    separate disciplines.
 - 
-  question: How hard is hardware engineering?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+  question: Do you make prototypes?
+  answer: >
+    Yes. Prototyping is integral to our
+    design process. We prototype early and
+    often. 3D printing, foam models,
+    cut-and-sew samples are created in our
+    workshop. High-end cosmetic and
+    functional prototypes are outsourced.
 
 ----
 
@@ -105,43 +69,25 @@ Heading3: Client  Questions
 Questions3: 
 
 - 
-  question: >
-    Have we been more liberated by the
-    changes in technology?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+  question: Do you have an expertise?
+  answer: >
+    Yes and no. No matter the project,
+    it’s our duty to rapidly learn all the
+    constraints and strategically push them
+    beyond the industry standard. In a
+    sense, we quickly become experts on any
+    project we undertake. Aside from that,
+    we have a lot of experience in audio,
+    consumer electronics, medical devices,
+    luxury, soft goods and packaging.
 - 
-  question: Why Phnam yelled at me?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+  question: Have you worked with overseas vendors?
+  answer: "Definitely. We work directly with manufacturing and prototyping partners on a regular basis – whether onsite factory visits or via conference calls. Strong relationships are the key to a product's success. These relationships help shepherd products through production and ensure quality, durability and attention to detail."
 - 
-  question: 'Should I whine at Mardis if Phnam yells  at me for producing poor work?'
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+  question: Do you collaborate with your clients?
+  answer: 'Always, unless they ask us not to. We engage with our clients to gain firsthand product insights. We frequently sketch, workshop and whiteboard together.  The insights we gain help us understand the product limits and how we can exceed expectations.'
 - 
   question: >
-    Should I quit being a designer because I
-    clearly have nothing intellengent to
-    say?
-  answer: |
-    The answer is easy. Because you didn’t
-    do you f**king work and you pretended
-    you did.
-    
-    So now, go back to finish your work
-    and stop whining.
+    What kind of client projects do you
+    prefer?
+  answer: "We don't subscribe to a single product category. Rather, we prefer clients that are willing to challenge conventional thinking and have fun while doing it. We engage, collaborate and go wide, then systematically narrow to a focused, cohesive solution."
